--- a/xlog/deployBintray.gradle
+++ b/xlog/deployBintray.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.novoda.bintray-release'
 publish {
     userOrg = '456838' // bintray.com 用户名
     groupId = 'com.salton123' // jcenter 上的路径
-    artifactId = 'framework' // 项目名称
+    artifactId = 'log' // 项目名称
     publishVersion = '1.0.0.0' // 版本号
     desc = 'https://github.com/LiveSalton/xlog.git' // 描述，不重要
     website = 'https://github.com/LiveSalton/xlog' // 网站
