build flush writer

--- a/flushwriter/build.gradle
+++ b/flushwriter/build.gradle
@@ -13,7 +13,7 @@ android {
         externalNativeBuild {
             cmake {
                 cppFlags "-std=c++11 -frtti -fexceptions -lz"
-                abiFilters 'armeabi-v7a'
+                abiFilters 'armeabi-v7a','x86'
             }
         }
 //        externalNativeBuild {
