--- a/flushwriter/build.gradle
+++ b/flushwriter/build.gradle
@@ -13,7 +13,8 @@ android {
         externalNativeBuild {
             cmake {
                 cppFlags "-std=c++11 -frtti -fexceptions -lz"
-                abiFilters 'armeabi-v7a','x86'
+//                abiFilters 'armeabi-v7a','x86'
+//                abiFilters 'arm64-v8a'
             }
         }
 //        externalNativeBuild {
