--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -11,6 +11,11 @@ android {
         applicationId "com.salton123.xlog.demo"
         versionCode 1
         versionName "1.0"
+
+        ndk {
+            abiFilters 'armeabi-v7a', 'arm64-v8a', 'x86', 'x86_64'
+//            abiFilters 'arm64-v8a'
+        }
     }
     buildTypes {
         release {
