--- a/build.gradle
+++ b/build.gradle
@@ -1,43 +1,76 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-
+apply from: "config.gradle"
 buildscript {
-    apply from: "./config.gradle"
+    apply from: "config.gradle"
     repositories {
         google()
         jcenter()
+        maven {
+            credentials {
+                username '6XCT1E'
+                password 'XldVM4G6IO'
+            }
+            url 'https://repo.rdc.aliyun.com/repository/43441-release-5ZHLZs/'
+        }
+        mavenLocal()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.2.0'
-        classpath 'com.novoda:bintray-release:0.9'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.2.51"
+        classpath 'com.android.tools.build:gradle:4.2.0'
+        classpath 'com.vanniktech:gradle-maven-publish-plugin:0.15.1'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlin_version}"
     }
 }
 
 allprojects {
-    repositories {
-        google()
-        jcenter()
-        mavenLocal()
-        maven { url 'https://jitpack.io' }
-        maven { url '../../repo' }
-    }
+//    repositories {
+//        google()
+//        jcenter()
+//        mavenLocal()
+//        maven { url 'https://jitpack.io' }//添加jitpack仓库地址
+//        maven {
+//            credentials {
+//                username '6XCT1E'
+//                password 'XldVM4G6IO'
+//            }
+//            url 'https://repo.rdc.aliyun.com/repository/43441-release-5ZHLZs/'
+//        }
+//    }
+
     configurations.all {
+//        transitive = false
         resolutionStrategy {
-            force "com.android.support:support-v4:${dependVersion.androidSupportSdkVersion}"
-            force "com.android.support:support-annotations:${dependVersion.androidSupportSdkVersion}"
-            force "com.android.support:appcompat-v7:${dependVersion.androidSupportSdkVersion}"
-            force "com.android.support:design:${dependVersion.androidSupportSdkVersion}"
-            force "com.android.support:recyclerview-v7:${dependVersion.androidSupportSdkVersion}"
-            force "com.android.support:cardview-v7:${dependVersion.androidSupportSdkVersion}"
-            force "com.android.support:design:${dependVersion.androidSupportSdkVersion}"
-            force "com.android.support:support-compat:${dependVersion.androidSupportSdkVersion}"
-            force "com.android.support:support-core-ui:${dependVersion.androidSupportSdkVersion}"
-            force "com.android.support:support-core-utils:${dependVersion.androidSupportSdkVersion}"
-            force "com.android.support:support-fragment:${dependVersion.androidSupportSdkVersion}"
-            force "com.android.support.constraint:constraint-layout:1.0.2"
+//            force "org.jetbrains.kotlin:kotlin-stdlib:1.3.50"
+//            force "androidx.lifecycle:lifecycle-runtime:2.0.0"
+//            force "androidx.appcompat:appcompat:1.0.0"
+//            force "androidx.recyclerview:recyclerview:1.0.0"
+//            force "androidx.constraintlayout:constraintlayout:1.1.3"
+//            force "androidx.appcompat:appcompat:1.0.0"
+//            force "androidx.recyclerview:recyclerview:1.0.0"
+//            force "androidx.recyclerview:recyclerview:1.0.0"
+//            force "com.google.android.material:material:1.0.0"
+//            force "androidx.vectordrawable:vectordrawable:1.0.0"
+//            force "androidx.arch.core:core-runtime:2.0.1"
+//            force "androidx.arch.core:core-common:2.0.1"
+//            force "androidx.lifecycle:lifecycle-common:2.0.0"
+//            force "androidx.lifecycle:lifecycle-viewmodel:2.0.0"
+//            force "androidx.lifecycle:lifecycle-process:2.0.0"
+//            force "androidx.lifecycle:lifecycle-service:2.0.0"
+//            force "androidx.lifecycle:lifecycle-runtime:2.0.0"
+//            force "androidx.lifecycle:lifecycle-common:2.0.0"
+//            force rootProject.ext.supportLibs
+//            force rootProject.ext.otherDependenciesLibs
         }
+//        all*.exclude group: 'androidx.databinding'
+//        all*.exclude group: 'androidx.documentfile'
+//        all*.exclude group: 'androidx.localbroadcastmanager'
+//        all*.exclude group: 'androidx.slidingpanelayout'
+//        all*.exclude group: 'androidx.room'
     }
 }
+
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+
+subprojects {
+    task allDeps(type: DependencyReportTask) {}
 }
