--- a/flushwriter/build.gradle
+++ b/flushwriter/build.gradle
@@ -1,4 +1,7 @@
-apply plugin: 'com.android.library'
+plugins {
+    id 'com.android.library'
+    id 'org.jetbrains.kotlin.android'
+}
 apply from: '../publish.gradle'
 android {
     compileSdk "${rootProject.ext.android.compileSdkVersion}" as Integer
@@ -7,16 +10,31 @@ android {
         targetSdk rootProject.ext.android.targetSdkVersion as Integer
         versionCode 1
         versionName "1.0"
+
+        externalNativeBuild {
+            cmake {
+                cppFlags "-std=c++11 -frtti -fexceptions -lz"
+//                abiFilters 'armeabi-v7a','x86'
+//                abiFilters 'arm64-v8a'
+            }
+        }
     }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    externalNativeBuild {
+        cmake {
+            path "CMakeLists.txt"
+        }
+    }
+
 }
 
 dependencies {
-    implementation fileTree(include: ['*.jar'], dir: 'libs')
-    api project(":flushwriter")
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
 }
