--- a/xlog/build.gradle
+++ b/xlog/build.gradle
@@ -19,4 +19,5 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     api project(":flushwriter")
+    api project(":mmap-writer")
 }
