--- a/mmap-writer/CMakeLists.txt
+++ b/mmap-writer/CMakeLists.txt
@@ -14,11 +14,6 @@ project("writer")
 # You can define multiple libraries, and CMake builds them for you.
 # Gradle automatically packages shared libraries with your APK.
 
-#打印目前配置
-message("CMAKE_CXX_FLAGS_DEBUG is ${CMAKE_CXX_FLAGS_DEBUG}")
-message("CMAKE_CXX_FLAGS_RELEASE is ${CMAKE_CXX_FLAGS_RELEASE}")
-message("CMAKE_C_FLAGS_RELEASE is ${CMAKE_C_FLAGS_RELEASE}")
-message("CMAKE_CURRENT_SOURCE_DIR is ${CMAKE_CURRENT_SOURCE_DIR}")
 
 # 配置编译参数
 set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -s")
@@ -26,14 +21,20 @@ set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -s")
 
 # 设置h头文件路径
 include_directories(src/main/cpp/includes)
-
 #设置编译源码目录
-aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR} LIB_SOURCE)
-
+aux_source_directory(src/main/cpp DIR_LIB_SOURCE)
 # 添加动态库
-add_library(writer SHARED MmapWriter.cpp)
+add_library(writer SHARED ${DIR_LIB_SOURCE})
 
-message("DIR_LIB_SOURCE is ${LIB_SOURCE}")
+#aux_source_directory(src/main/cpp/ DIR_LIB_SOURCE)
+#add_library(flushwriter SHARED ${DIR_LIB_SOURCE})
+
+#打印目前配置
+message("CMAKE_CXX_FLAGS_DEBUG is ${CMAKE_CXX_FLAGS_DEBUG}")
+message("CMAKE_CXX_FLAGS_RELEASE is ${CMAKE_CXX_FLAGS_RELEASE}")
+message("CMAKE_C_FLAGS_RELEASE is ${CMAKE_C_FLAGS_RELEASE}")
+message("CMAKE_CURRENT_SOURCE_DIR is ${CMAKE_CURRENT_SOURCE_DIR}")
+message("DIR_LIB_SOURCE is ${DIR_LIB_SOURCE}")
 
 # Searches for a specified prebuilt library and stores the path as a
 # variable. Because CMake includes system libraries in the search path by
