--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-parcelize'
+apply plugin: 'kotlin-android-extensions'
 //apply plugin: 'com.salton123.plugin.codecheck-gradle'
 android {
     compileSdk "${rootProject.ext.android.compileSdkVersion}" as Integer
