--- a/mmap-writer/CMakeLists.txt
+++ b/mmap-writer/CMakeLists.txt
@@ -5,55 +5,24 @@
 
 cmake_minimum_required(VERSION 3.4.1)
 
-# Declares and names the project.
-
+# 声明项目名，也就是动态库的名字
 project("mmap-writer")
-
-# Creates and names a library, sets it as either STATIC
-# or SHARED, and provides the relative paths to its source code.
-# You can define multiple libraries, and CMake builds them for you.
-# Gradle automatically packages shared libraries with your APK.
-
-
 # 配置编译参数
 set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -s")
 set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -s")
-
-# 设置h头文件路径
-include_directories(src/main/cpp/includes)
 #设置编译源码目录
 aux_source_directory(src/main/cpp DIR_LIB_SOURCE)
-
+# 添加动态库
+add_library(mmap-writer SHARED ${DIR_LIB_SOURCE})
+# 设置h头文件路径
+include_directories(src/main/cpp/includes)
 #打印目前配置
 message("CMAKE_CXX_FLAGS_DEBUG is ${CMAKE_CXX_FLAGS_DEBUG}")
 message("CMAKE_CXX_FLAGS_RELEASE is ${CMAKE_CXX_FLAGS_RELEASE}")
 message("CMAKE_C_FLAGS_RELEASE is ${CMAKE_C_FLAGS_RELEASE}")
 message("CMAKE_CURRENT_SOURCE_DIR is ${CMAKE_CURRENT_SOURCE_DIR}")
 message("DIR_LIB_SOURCE is ${DIR_LIB_SOURCE}")
-
-# Searches for a specified prebuilt library and stores the path as a
-# variable. Because CMake includes system libraries in the search path by
-# default, you only need to specify the name of the public NDK library
-# you want to add. CMake verifies that the library exists before
-# completing its build.
-
-find_library( # Sets the name of the path variable.
-        log-lib
-
-        # Specifies the name of the NDK library that
-        # you want CMake to locate.
-        log)
-
-# Specifies libraries CMake should link to your target library. You
-# can link multiple libraries, such as libraries you define in this
-# build script, prebuilt third-party libraries, or system libraries.
-
-# 添加动态库
-add_library(mmap-writer SHARED ${DIR_LIB_SOURCE})
-
-target_link_libraries( # Specifies the target library.
-        mmap-writer
-
-        # Links the target library to the log library
-        # included in the NDK.
-        ${log-lib})
+# 查找native库log，赋值为loglib
+find_library(loglib log)
+# 链接loglib给mmap-writer
+target_link_libraries(mmap-writer ${loglib})
