--- a/mmap-writer/CMakeLists.txt
+++ b/mmap-writer/CMakeLists.txt
@@ -11,9 +11,9 @@ project("mmap-writer")
 set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -s")
 set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -s")
 #设置编译源码目录
-aux_source_directory(src/main/cpp DIR_LIB_SOURCE)
+aux_source_directory(src/main/cpp LIB_SOURCE)
 # 添加动态库
-add_library(mmap-writer SHARED ${DIR_LIB_SOURCE})
+add_library(mmap-writer SHARED ${LIB_SOURCE})
 # 设置h头文件路径
 include_directories(src/main/cpp/includes)
 #打印目前配置
@@ -21,7 +21,7 @@ message("CMAKE_CXX_FLAGS_DEBUG is ${CMAKE_CXX_FLAGS_DEBUG}")
 message("CMAKE_CXX_FLAGS_RELEASE is ${CMAKE_CXX_FLAGS_RELEASE}")
 message("CMAKE_C_FLAGS_RELEASE is ${CMAKE_C_FLAGS_RELEASE}")
 message("CMAKE_CURRENT_SOURCE_DIR is ${CMAKE_CURRENT_SOURCE_DIR}")
-message("DIR_LIB_SOURCE is ${DIR_LIB_SOURCE}")
+message("LIB_SOURCE is ${LIB_SOURCE}")
 # 查找native库log，赋值为loglib
 find_library(loglib log)
 # 链接loglib给mmap-writer
