--- a/gradle.properties
+++ b/gradle.properties
@@ -23,4 +23,4 @@ android.enableJetifier=true
 kapt.incremental.apt=false
 android.nonTransitiveRClass=true
 group=com.salton123
-version=1.0.0.0-SNAPSHOT
+version=1.0.0.6
