replace with mars xlog

--- a/gradle.properties
+++ b/gradle.properties
@@ -11,7 +11,7 @@ org.gradle.parallel=true
 org.gradle.jvmargs=-Xmx2048m -XX\:MaxPermSize\=512m -XX\:+HeapDumpOnOutOfMemoryError -Dfile.encoding\=UTF-8
 #org.gradle.jvmargs=-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=8899
 #org.gradle.jvmargs=-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005
-android.enableBuildCache=true
+#android.enableBuildCache=true
 android.injected.testOnly=false
 # android.enableAapt2=false
 # AndroidX package structure to make it clearer which packages are bundled with the
