--- a/xlog/build.gradle
+++ b/xlog/build.gradle
@@ -18,6 +18,7 @@ android {
 }
 
 dependencies {
-    api project(":mmap-writer")
+//    api project(":mmap-writer")
     compileOnly "org.jetbrains.kotlin:kotlin-stdlib:1.2.71"
+    implementation 'com.tencent.mars:mars-xlog:+'
 }
