--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,38 @@
-apply from: "config.gradle"
+// Top-level build file where you can add configuration options common to all sub-projects/modules.
+
 buildscript {
-    apply from: "config.gradle"
+    apply from: "./config.gradle"
     repositories {
+        maven { url 'https://maven.aliyun.com/repository/google' }
+        maven { url 'https://maven.aliyun.com/repository/public/' }
+        maven { url 'https://maven.aliyun.com/repository/central' }
+        maven { url 'https://maven.aliyun.com/repository/gradle-plugin' }
         google()
-        jcenter()
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:7.1.3'
+        classpath 'com.vanniktech:gradle-maven-publish-plugin:0.15.1'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlin_version}"
+    }
+}
+
+allprojects {
+    repositories {
+//        maven { url 'https://archiva-maven-storage-prod.oss-cn-beijing.aliyuncs.com/repository/google' }
+        maven { url 'https://maven.aliyun.com/repository/google' }
+        maven { url 'https://maven.aliyun.com/repository/public/' }
+        maven { url 'https://maven.aliyun.com/repository/central' }
+        maven { url 'https://maven.aliyun.com/repository/gradle-plugin' }
+        maven {
+            url 'https://android-sdk.is.com/'
+        }
+        google()
+        mavenCentral()
+        maven {
+            url 'https://artifact.bytedance.com/repository/pangle'
+        }
+        maven { url 'https://jitpack.io' }
         maven {
             credentials {
                 username '6XCT1E'
@@ -11,66 +40,15 @@ buildscript {
             }
             url 'https://repo.rdc.aliyun.com/repository/43441-release-5ZHLZs/'
         }
-        mavenLocal()
     }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:4.2.2'
-        classpath 'com.vanniktech:gradle-maven-publish-plugin:0.15.1'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlin_version}"
-    }
-}
-
-allprojects {
-//    repositories {
-//        google()
-//        jcenter()
-//        mavenLocal()
-//        maven { url 'https://jitpack.io' }//添加jitpack仓库地址
-//        maven {
-//            credentials {
-//                username '6XCT1E'
-//                password 'XldVM4G6IO'
-//            }
-//            url 'https://repo.rdc.aliyun.com/repository/43441-release-5ZHLZs/'
-//        }
-//    }
-
     configurations.all {
 //        transitive = false
         resolutionStrategy {
-//            force "org.jetbrains.kotlin:kotlin-stdlib:1.3.50"
-//            force "androidx.lifecycle:lifecycle-runtime:2.0.0"
-//            force "androidx.appcompat:appcompat:1.0.0"
-//            force "androidx.recyclerview:recyclerview:1.0.0"
-//            force "androidx.constraintlayout:constraintlayout:1.1.3"
-//            force "androidx.appcompat:appcompat:1.0.0"
-//            force "androidx.recyclerview:recyclerview:1.0.0"
-//            force "androidx.recyclerview:recyclerview:1.0.0"
-//            force "com.google.android.material:material:1.0.0"
-//            force "androidx.vectordrawable:vectordrawable:1.0.0"
-//            force "androidx.arch.core:core-runtime:2.0.1"
-//            force "androidx.arch.core:core-common:2.0.1"
-//            force "androidx.lifecycle:lifecycle-common:2.0.0"
-//            force "androidx.lifecycle:lifecycle-viewmodel:2.0.0"
-//            force "androidx.lifecycle:lifecycle-process:2.0.0"
-//            force "androidx.lifecycle:lifecycle-service:2.0.0"
-//            force "androidx.lifecycle:lifecycle-runtime:2.0.0"
-//            force "androidx.lifecycle:lifecycle-common:2.0.0"
-//            force rootProject.ext.supportLibs
-//            force rootProject.ext.otherDependenciesLibs
+//            force "com.android.support.constraint:constraint-layout:1.0.2"
         }
-//        all*.exclude group: 'androidx.databinding'
-//        all*.exclude group: 'androidx.documentfile'
-//        all*.exclude group: 'androidx.localbroadcastmanager'
-//        all*.exclude group: 'androidx.slidingpanelayout'
-//        all*.exclude group: 'androidx.room'
     }
 }
-
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
 
-subprojects {
-    task allDeps(type: DependencyReportTask) {}
-}
