--- a/gradle.properties
+++ b/gradle.properties
@@ -23,4 +23,4 @@ android.enableJetifier=true
 kapt.incremental.apt=false
 android.nonTransitiveRClass=true
 group=com.salton123
-version=1.0.1.1-mars
+version=1.1.0.1
